# trajectory_recording_tool

trajectory_recording_tool/: CMakeLists.txt  package.xml  setup.py
trajectory_recording_tool/src/scratch/: regex_json_format.py  save_directory_user_input_checking.py
trajectory_recording_tool/src/trajectory_recording_tool/: json_load_byteified.py  record.py  rviz_interactive_markers.py  smach_state_classes.py  trajectory_recorder_class.py  waypoint_class.py
trajectory_recording_tool/trajectories/: first_test_saving_continuous_behavior_0.json  test_with_urdf_0.json  test_without_urdf_0.json
